# apertium-slv-spa

./: .gitattributes  .gitignore  Makefile.am  MidtermEvalTestCase.txt  README  apertium-sl-es.es-sl.t1x  apertium-sl-es.sl-es.dix  apertium-sl-es.sl-es.t1x  apertium-sl-es.sl.dix  apertium-sl-es.sl.tsx  configure.ac  modes.xml  sl-es.mode  sl-es.prob  wiki-tests.sh
dev/: bilingual-summary.txt  es.ord  gen-ord.pl  generation-summary.sl-es.txt  generation-test.py  inconsistency.sh  missing-bidix-freq.sh  sl-es.ord  sl.ord  testvoc-summary.sl-es.txt
dev/bidix/: pending_adjectives.txt  pending_adverbs.txt  pending_conjunctions.txt  pending_determiners.txt  pending_nouns.txt  pending_numerals.txt  pending_prepositions.txt  pending_pronouns.txt  pending_proper_nouns.txt  pending_verbs.txt
dev/midterm/: article.es.txt
dev/sl/: trimDict.py
dev/tests/: wiki-tests.sh
eval/: INSTALL  Makefile  makeMeteorFormat  test.es.txt  test.sl.txt
midterm/: article.sl.txt
sl-tagger-data/: sl.crp.txt  sl.crp.txt.REMOVED.git-id
test/: slv-spa-pending-generator-expected.txt  slv-spa-pending-input.txt  slv-spa-pending-interchunk-expected.txt  slv-spa-pending-morph-expected.txt  slv-spa-pending-postchunk-expected.txt  slv-spa-pending-postgen-expected.txt  slv-spa-pending-postgen-gold.txt  slv-spa-pending-pretransfer-expected.txt  slv-spa-regression-generator-expected.txt  slv-spa-regression-input.txt  slv-spa-regression-interchunk-expected.txt  slv-spa-regression-morph-expected.txt  slv-spa-regression-postchunk-expected.txt  slv-spa-regression-postgen-gold.txt  slv-spa-regression-pretransfer-expected.txt  tests.json
